--- a/views/home.pug
+++ b/views/home.pug
@@ -83,9 +83,35 @@ html(lang='en')
                   td #{member.email}
                   td #{member.telephone}
                   td
-
-                    button.btn.btn-info Edit
+            
+                    button.btn.btn-info.edit(value=member._id) Edit
                     button(value=member._id style="margin-left:10px").btn.btn-danger.delete Remove
+          .dontshow            
+            form(name='contact', action='/update', method='post')
+              fieldset
+                legend Contact Information
+                .form-group
+                  input(type="text",name="id")#id.hide
+                  label.hide(for='firstName')
+                    i.glyphicon.glyphicon-user
+                    |  First Name *
+                  input#firstName1.form-control.name(autofocus='', type='text', name='firstName', placeholder='First Name *', pattern='^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$', title='Enter first name (e.g. John)', required='')
+                .form-group
+                  label.hide(for='lastName')
+                    i.glyphicon.glyphicon-user
+                    |  Last Name *
+                  input#lastName1.form-control.name(type='text', name='lastName', placeholder='Last Name *', pattern='^[a-zA-Z][a-zA-Z0-9-_\.]{1,20}$', title='Enter last name (e.g. Smith)', required='')
+                .form-group
+                  label.hide(for='email')
+                    i.glyphicon.glyphicon-envelope
+                    |  E-mail *
+                  input#email1.form-control.email(type='email', name='email', placeholder='E-mail *', pattern='[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{2,4}$', title='Enter e-mail address (e.g. your.email@address.com)', required='')
+                .form-group
+                  label.hide(for='telephone')
+                    i.glyphicon.glyphicon-earphone
+                    |  Telephone *
+                  input#telephone1.form-control.tel(type='tel', name='telephone', placeholder='Telephone *', pattern='^\(?\d{3}\)?[- ]?\d{3}[- ]?\d{4}$', title='Enter telephone number (e.g. 555-555-5555)', required='')
+                button.btn.btn-primary.btn-block(type='submit') Update         
     script(src='https://code.jquery.com/jquery-3.3.1.js')
     script(src='https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js')
     script(src='https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js')
